--- a/styles.css
+++ b/styles.css
@@ -107,8 +107,7 @@ html {
   pointer-events: none;
   transform: translate(-50%, -50%);
   mix-blend-mode: difference;
-  transition: transform 0.3s ease-out, opacity 1s ease-out;
-  transition: transform var(--transition-fast) var(--transition-ease-in-out), opacity var(--transition-slow) var(--transition-ease-in-out);
+  transition: transform var(--transition-fast) var(--transition-ease-in-out);
   z-index: 10000;
 }
 
