--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,10 @@
 :root {
   --main-radius: 0px;
   --lateral-padding: 10px;
-  --margin-tb: 8px;
+  --lateral-padding-mobile: 8px;
   --grey-text: 12px;
   --responsive-text: 9px;
+  --content-gap: 20px;
 
   --primary-color: whitesmoke;
   --secondary-color: black;
@@ -11,7 +12,6 @@
 
   --transition-fast: 0.3s;
   --transition-slow: 1s;
-  --transition-ease: ease;
   --transition-ease-in-out: ease-in-out;
   --transition-steps: steps(8);
 }
@@ -265,7 +265,7 @@ a {
   text-decoration-line: underline;
   text-decoration-style: dotted;
   text-underline-offset: 3px;
-  transition: color var(--transition-fast) ease, transform var(--transition-fast) ease;
+  transition: color var(--transition-fast) var(--transition-ease-in-out), transform var(--transition-fast) ease;
   opacity: 1;
 }
 
@@ -289,7 +289,7 @@ a:hover {
 
 .credits {
   position: fixed;
-  bottom: 10px;
+  bottom: var(--lateral-padding);
   width: 100%;
   text-align: center;
   color: var(--primary-color);
@@ -304,7 +304,7 @@ a:hover {
   right: 10px;
   z-index: 9100;
   transform: translate(0, -50%);
-  transition: opacity var(--transition-fast) ease;
+  transition: opacity var(--transition-fast) var(--transition-ease-in-out);
   display: none;
 }
 
@@ -317,7 +317,7 @@ a:hover {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  gap: 16px;
+  /* gap: 16px; */
   text-align: right;
 }
 
@@ -367,7 +367,6 @@ a:hover {
 .button-cont-info {
   display: grid;
   grid-auto-rows: auto;
-  gap: 20px;
   width: 30vw;
   margin: 0 auto;
   transition: max-height var(--transition-slow) var(--transition-ease-in-out);
@@ -375,19 +374,6 @@ a:hover {
   max-height: 0;
   mix-blend-mode: difference;
   font-size: var(--grey-text);
-}
-
-.cv-cont {
-  display: grid;
-  grid-template-columns: 5fr 2fr;
-  opacity: 1;
-  color: var(--primary-color);
-  mix-blend-mode: difference;
-  align-items: start;
-}
-
-.cv-cont>div {
-  text-align: left;
 }
 
 .cv-button {
@@ -406,19 +392,54 @@ a:hover {
   opacity: 0.5;
 }
 
-.dates {
-  text-align: right;
+.cv-cont {
+  display: grid;
+  grid-template-columns: 5fr 2fr;
+  opacity: 1;
+  color: var(--primary-color);
+  mix-blend-mode: difference;
+  align-items: start;
+  margin-bottom: 20px;
 }
 
-.date,
-.edu {
-  margin-top: 4px;
+.cv-cont .school {
+  grid-column: 1 / 2;
+  opacity: 0.5;
+  text-transform: lowercase;
+}
+
+.cv-cont .period {
+  grid-column: 2 / 3;
+  opacity: 0.5;
+  text-transform: lowercase;
+}
+
+.cv-cont dt {
+  grid-column: 1 / 2;
+  margin: 0;
   text-transform: uppercase;
+  margin-top: 4px;
+  line-height: 1.2;
+}
+
+.cv-cont dd {
+  grid-column: 2 / 3;
+  margin: 0;
+  text-transform: uppercase;
+  margin-top: 4px;
 }
 
 .context {
   margin-top: 4px;
   opacity: 0.5;
+}
+
+.extra {
+  margin-top: 4px;
+}
+
+.margin-bottom {
+  margin-bottom: 20px;
 }
 
 .contex-2 {
@@ -440,7 +461,7 @@ a:hover {
   max-width: 72ch;
   max-height: 0;
   overflow: hidden;
-  transition: max-height 0.6s var(--transition-ease-in-out), opacity var(--transition-fast) ease;
+  transition: max-height 0.6s var(--transition-ease-in-out), opacity var(--transition-fast) var(--transition-ease-in-out);
   opacity: 1;
   line-height: 1.3;
 }
@@ -464,8 +485,8 @@ a:hover {
   opacity: 0;
   margin: 0;
   left: var(--lateral-padding);
+  bottom: var(--lateral-padding);
   position: absolute;
-  bottom: 10px;
   transition: max-height var(--transition-slow) var(--transition-ease-in-out), opacity var(--transition-slow) var(--transition-ease-in-out);
 }
 
@@ -651,19 +672,24 @@ html.is-touch .custom-cursor {
 
   .nav,
   .nav-project,
-  .nav-info {
+  .nav-info,
+  .nav-home {
+    margin: 0;
     font-size: var(--responsive-text);
-    top: var(--margin-tb);
     transform: none;
-    margin: 0 calc(var(--lateral-padding)/2);
+    top: var(--lateral-padding-mobile);
+  }
+
+  #nav-project {
+    margin-right: var(--lateral-padding-mobile);
+  }
+
+  #nav-home {
+    margin-left: var(--lateral-padding-mobile);
   }
 
   #nav-name {
-    top: 8px;
-  }
-
-  .nav-project a {
-    margin-right: calc(var(--lateral-padding)/2);
+    top: var(--lateral-padding-mobile);
   }
 
   .expand-button {
@@ -673,10 +699,6 @@ html.is-touch .custom-cursor {
   .description-x {
     width: 6.25px;
     height: auto;
-  }
-
-  #nav-home {
-    margin: 0;
   }
 
   .news {
@@ -696,12 +718,12 @@ html.is-touch .custom-cursor {
   .news-info {
     text-align: left;
     flex-grow: 1;
-    margin-left: calc(var(--lateral-padding)/2);
+    margin-left: var(--lateral-padding-mobile);
   }
 
   .news-close {
     font-size: var(--responsive-text);
-    margin-right: calc(var(--lateral-padding)/2);
+    margin-right: var(--lateral-padding-mobile);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -725,18 +747,24 @@ html.is-touch .custom-cursor {
 
   .credits {
     font-size: 6px;
+    bottom: var(--lateral-padding-mobile);
   }
 
   .description-content {
     max-height: 0;
     overflow: hidden;
-    transition: max-height 0.6s var(--transition-ease-in-out), opacity var(--transition-fast) ease;
+    transition: max-height 0.6s var(--transition-ease-in-out), opacity var(--transition-fast) var(--transition-ease-in-out);
     opacity: 1;
   }
 
   .cv-cont {
     display: grid;
     grid-template-columns: 2fr 1fr;
+    margin-bottom: 14px;
+  }
+
+  .margin-bottom {
+    margin-bottom: 14px;
   }
 
   .corner {
@@ -755,7 +783,6 @@ html.is-touch .custom-cursor {
   .button-cont-info {
     font-size: var(--responsive-text);
     width: 100vw;
-    gap: var(--responsive-text);
   }
 
   #bottom-cont-info {
@@ -764,14 +791,16 @@ html.is-touch .custom-cursor {
     left: calc(var(--lateral-padding)/2);
     position: fixed;
     z-index: 100000;
-    bottom: var(--margin-tb);
+    bottom: var(--lateral-padding-mobile);
+    left: var(--lateral-padding-mobile);
+    right: var(--lateral-padding-mobile);
     transition: max-height var(--transition-slow) var(--transition-ease-in-out), opacity var(--transition-slow) var(--transition-ease-in-out);
   }
 
   #image-gallery {
-    top: var(--margin-tb);
+    top: var(--lateral-padding-mobile);
+    right: var(--lateral-padding-mobile);
     margin-top: 0;
-    right: calc(var(--lateral-padding)/2);
     transform: none;
   }
 
@@ -781,7 +810,7 @@ html.is-touch .custom-cursor {
 
   .project-list {
     font-size: var(--responsive-text);
-    gap: 10px;
+    /* gap: 10px; */
   }
 
   .project-item {
