--- a/styles.css
+++ b/styles.css
@@ -517,12 +517,15 @@ a:hover {
 }
 
 .scroll-container {
-  overflow: hidden;
-  overflow-y: scroll;
   height: 100vh;
-  scroll-snap-type: y mandatory;
   opacity: 0;
-  transition: max-height var(--transition-slow) var(--transition-ease-in-out), opacity var(--transition-slow) var(--transition-ease-in-out);
+  overflow-x: hidden;
+  overflow-y: auto;
+  -webkit-overflow-scrolling: touch;
+  scroll-snap-type: y mandatory;
+  touch-action: pan-y;
+  transition: opacity var(--transition-slow) var(--transition-ease-in-out),
+    transform var(--transition-fast) var(--transition-ease-in-out);
 }
 
 .image-section {
