--- a/styles.css
+++ b/styles.css
@@ -35,6 +35,9 @@
 
 body,
 html {
+  /* -webkit-text-size-adjust: none !important;
+  -ms-text-size-adjust: none !important;
+  text-size-adjust: none !important; */
   -webkit-text-size-adjust: none;
   -ms-text-size-adjust: none;
   text-size-adjust: none;
@@ -52,18 +55,6 @@ html {
   background-color: var(--secondary-color);
   color: white;
 }
-
-/* html,
-body,
-.credits,
-.project-title,
-.project-year,
-.project-extra,
-.project-item {
-  -webkit-text-size-adjust: none !important;
-  -ms-text-size-adjust: none !important;
-  text-size-adjust: none !important;
-} */
 
 .corner-values,
 .corner-values-info {
