--- a/styles.css
+++ b/styles.css
@@ -126,6 +126,8 @@ html {
   opacity: 0;
   transform-origin: center;
   position: fixed;
+  left: 0;
+  top: 0;
   width: 16px;
   height: 16px;
   pointer-events: none;
